--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     <title>Helali</title>
 </head>
 <body>
     <header>
+        <div class="flex justify-end">
+            <div class="background-black"></div>
+            <div class="background-green"></div>
+        </div>
         <div class="header-background">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand header-logo" href="#">helali</a>
+                    <a class="logo-text" href="#">
+                        <span class="material-symbols-outlined header-icon">wifi</span>
+                        helali
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <div class="header-nav collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">HOME</a>
+                                <a class="nav-link white-nav-link" aria-current="page" href="#">HOME</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">ABOUT US</a>
@@ -31,14 +39,32 @@
                                 <a class="nav-link" href="#">SERVICES</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#">PORTFOLIO</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">CONTACT</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div>
-                
+            <div class="container">
+                <div class="flex justify-center margin-top-200px">
+                    <h1 class="header-title-white">We are <span class="header-title-black">Creative</span></h1>
+                </div>
+            </div>
+            <div class="container">
+                <div class="flex justify-center ">
+                    <a class="margin-right-350px margin-top-100px button" href="#">
+                        <span class="material-symbols-outlined button-point">
+                            radio_button_unchecked</span>
+                        PORTFOLIO
+                    </a>
+                    <div class="button-line"></div>
+                </div>
+            </div>
+            <div class="container border-left margin-top-100px flex justify-end">
+                <h2 class="ux-ui-white-title">UX<span class="ux-ui-black-dot">.</span>UI</h2>
             </div>
         </div>
     </header>
