services section bijna klaar

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="border-right"></div>
             <div class="row">
                 <div class="col-9">
-                    <div class="services-title">
-                        <h2><span class="">Our</span> Services</h2>
+                    <div>
+                        <h2 class="services-title"><span class="services-title-black">Our</span> Services</h2>
                     </div>
                     <div class="services-text">
                         <p>
@@ -37,41 +37,71 @@
                         </p>
                     </div>
                 </div>
-                <div class="">
-                    <div>
-                        <div>
-                            <i class="bi bi-boxes services-icons"></i>
-                        </div>
-                        <div>
-
-                        </div>
-                        <div>
-
-                        </div>
+                <div class="button-div col-4 flex flex-direction-column margin-top-60px">
+                    <div class="margin-bottom-25px">
+                        <i class=" bi bi-boxes services-icons"></i>
                     </div>
                     <div>
-                        <div>
-                            <i class="bi bi-gear services-icons"></i>
-                        </div>
-                        <div>
-
-                        </div>
-                        <div>
-
-                        </div>
+                        <h2 class="services-subtitle margin-bottom-15px">UX.UI Design</h2>
+                        <p>Check out our <span class="services-text-500">dribbble</span> profile for more. You can get
+                            more
+                            portfolio sample here
+                        </p>
                     </div>
-                    <div>
-                        <div>
-                            <i class="bi bi-lightbulb services-icons"></i>
-                        </div>
-                        <div>
-
-                        </div>
-                        <div>
-
-                        </div>
+                    <div class="margin-top-40px">
+                        <a class="second-button" href="#">
+                            <span class="material-symbols-outlined button-point">
+                                radio_button_unchecked
+                            </span>
+                            PORTFOLIO
+                        </a>
+                        <div class="second-button-line"></div>
                     </div>
                 </div>
+                <div class="col-4 flex flex-direction-column margin-top-60px">
+                    <div class="margin-bottom-25px">
+                        <i class="bi bi-gear services-icons"></i>
+                    </div>
+                    <div>
+                        <h2 class="services-subtitle margin-bottom-15px">Graphic Desing</h2>
+                        <p>Check out our <span class="services-text-500">behance</span> profile for more. You can get
+                            more
+                            portfolio sample here
+                        </p>
+                    </div>
+                    <div class="margin-top-40px">
+                        <a class="second-button" href="#">
+                            <span class="material-symbols-outlined button-point">
+                                radio_button_unchecked
+                            </span>
+                            PORTFOLIO
+                        </a>
+                        <div class="second-button-line"></div>
+                    </div>
+                </div>
+                <div class="col-4 flex flex-direction-column margin-top-60px">
+                    <div class="margin-bottom-25px">
+                        <i class="bi bi-lightbulb services-icons"></i>
+                    </div>
+                    <div>
+                        <h2 class="services-subtitle margin-bottom-15px">Logo Branding</h2>
+                        <p>Check out our <span class="services-text-500">dribbble</span> profile for more. You can get
+                            more
+                            portfolio
+                            sample here
+                        </p>
+                    </div>
+                    <div class="margin-top-40px">
+                        <a class="second-button" href="#">
+                            <span class="material-symbols-outlined button-point">
+                                radio_button_unchecked
+                            </span>
+                            PORTFOLIO
+                        </a>
+                        <div class="second-button-line"></div>
+                    </div>
+                </div>
+                <div class="border-left"></div>
             </div>
         </div>
     </section>
