css problemen opgelost

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="margin-top-40px">
                         <a class="second-button" href="#">
-                            <span class="material-symbols-outlined button-point">
+                            <span class="material-symbols-outlined second-button-point">
                                 radio_button_unchecked
                             </span>
                             PORTFOLIO
@@ -71,7 +71,7 @@
                     </div>
                     <div class="margin-top-40px">
                         <a class="second-button" href="#">
-                            <span class="material-symbols-outlined button-point">
+                            <span class="material-symbols-outlined second-button-point">
                                 radio_button_unchecked
                             </span>
                             PORTFOLIO
@@ -93,7 +93,7 @@
                     </div>
                     <div class="margin-top-40px">
                         <a class="second-button" href="#">
-                            <span class="material-symbols-outlined button-point">
+                            <span class="material-symbols-outlined second-button-point">
                                 radio_button_unchecked
                             </span>
                             PORTFOLIO
