kleine aanpassing in de header section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="button-line"></div>
                 </div>
             </div>
-            <div class="container border-left margin-top-100px flex justify-end">
+            <div class="container header-border-left margin-top-100px flex justify-end">
                 <h2 class="ux-ui-white-title">UX<span class="ux-ui-black-dot">.</span>UI</h2>
             </div>
         </div>
