--- a/index.html
+++ b/index.html
@@ -126,6 +126,53 @@
 </section>
 
 
+<section class="portfolio ">
+    <div class="container ">
+        <div class="portfolio-heading">
+            <h2 class="mb-4"><span class="green-text">Portfolio</span> World</h2>
+            <p class="portfolio-heading-text">Graphic Design Services. Websites, businesses and brands are all much more than just words and products they're also images and art. Graphic design is an integral part of any business and that's as true for your company's image and your marketing.</p>
+        </div>
+    </div>
+
+    <div class="container margin-top-40px ">
+        <ul class="portfolio-menu padding-right-left-100px">
+            <li class="green-text">All</li>
+            <li>Graphic design</li>
+            <li>Logo branding</li>
+            <li>ux/ui design</li>
+        </ul>    
+    </div>
+
+    <div class="portfolio-images">
+       <div class="row row-cols-1 row-cols-md-4 g-0">
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0 ">
+            <img src="img/coffee-beans.jpg" class="img-fluid aspect-ratio-child " >
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0 ">
+            <img src="img/milkbottle.jpg" class="img-fluid aspect-ratio-child " >
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0">
+            <img src="img/bag.jpg"  class="img-fluid aspect-ratio-child ">
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0 " >
+            <img src="img/bag.jpg"  class="img-fluid aspect-ratio-child ">
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0">
+            <img src="img/white-cat.jpg" class="img-fluid aspect-ratio-child " >
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0">
+            <img src="img/bag.jpg"  class="img-fluid aspect-ratio-child ">
+        </div>
+        <div class="col aspect-ratio aspect-ratio-1x1 p-0">
+            <img src="img/coffee-beans.jpg" class="img-fluid aspect-ratio-child " >
+        </div>
+        <div class="col  aspect-ratio aspect-ratio-1x1 p-0">
+            <img src="img/white-cat.jpg"   class="img-fluid aspect-ratio-child " >
+        </div>
+       </div>
+    </div>
+</section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
