kleine aanpassingen aan de about us sectie

--- a/index.html
+++ b/index.html
@@ -82,17 +82,18 @@
 
     <section class="About-us">
         <div class="container">
-            <div class="About-us-heading">
-                <h2><span class="green-text">About</span> us</h2>
-                <p class="About-heading-text">A <span class="bold">creative</span> director is a position often found
-                    within the graphic design, film, music, video game, fas-<br>hion, advertising, media, or
-                    entertainment industries, but may be useful in other creative organizations <br>such as web
+            <div class="row margin-left-50px margin-right-50px">
+                <div class="col-9">
+                    <div class="About-us-heading margin-top-100px">
+                    <h2><span class="green-text">About</span> us</h2>
+                    <p class="About-heading-text">A <span class="bold">creative</span> director is a position often found
+                    within the graphic design, film, music, video game, fashion, advertising, media, or
+                    entertainment industries, but may be useful in other creative organizations such as web
                     development and software development firms as well. </p>
-            </div>
-
-            <div class="About-us-content">
-                <div class="row">
-                    <div class="About-us-content-box col-md-4">
+                    </div>
+                </div>
+                
+                    <div class="button-div col-4 flex flex-direction-column margin-top-60px">
                         <div class="icon-overlay-container">
                             <i class="fa-brands fa-dribbble"></i>
                             <span class="icon-overlay"></span>
@@ -100,12 +101,12 @@
                         <div class="about-icon-title">
                             <h3>dribbble</h3>
                         </div>
-                        <div class="about-icon-text">
+                        <div class="about-icon-text col-8">
                             <p>Check out our <span class="green-text">dribbble</span> profile for more. You can get more
                                 portfolio sample here</p>
                         </div>
                     </div>
-                    <div class="About-us-content-box col-md-4">
+                    <div class="button-div col-4 flex flex-direction-column margin-top-60px">
                         <div class="icon-overlay-container">
                             <i class="fa-brands fa-behance"></i>
                             <div class="icon-overlay"></div>
@@ -113,12 +114,12 @@
                         <div class="about-icon-title">
                             <h3>behance</h3>
                         </div>
-                        <div class="about-icon-text">
+                        <div class="about-icon-text col-8">
                             <p>Check out our <span class="green-text">behance</span> profile for more. You can get more
                                 portfolio sample here</p>
                         </div>
                     </div>
-                    <div class="About-us-content-box col-md-4">
+                    <div class="button-div col-4 flex flex-direction-column margin-top-60px">
                         <div class="icon-overlay-container">
                             <i class="fa-solid fa-cloud-arrow-up"></i>
                             <div class="icon-overlay"></div>
@@ -126,18 +127,21 @@
                         <div class="about-icon-title">
                             <h3>Uplabs</h3>
                         </div>
-                        <div class="about-icon-text">
+                        <div class="about-icon-text col-8">
                             <p>Check out our <span class="green-text">uplabs</span> profile for more. You can get more
                                 portfolio sample here</p>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </div>
     </section>
-    <section class="background-grey">
+
+
+
+    <section class="background-grey ">
         <div class="container">
-            <div class="row">
+            <div class="row margin-left-50px margin-right-50px">
                 <div class="border-right"></div>
                 <div class="col-9">
                     <div>
