--- a/index.html
+++ b/index.html
@@ -249,49 +249,57 @@
        <div class="row row-cols-1 row-cols-md-4 g-0">
         <div class="col p-0 ">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/coffee-beans.jpg" class="img-fluid " >
         </div>
         <div class="col p-0 ">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
-            <img src="img/milkbottle.jpg" class="img-fluid  " >
+            <img src="img/milkbottle.jpg" class="img-fluid " >
         </div>
         <div class="col p-0">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/bag.jpg"  class="img-fluid ">
         </div>
         <div class="col p-0 " >
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
-            <img src="img/bag.jpg"  class="img-fluid ">
+            <img src="img/plant.jpg"  class="img-fluid ">
         </div>
         <div class="col p-0">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/white-cat.jpg" class="img-fluid  " >
         </div>
         <div class="col p-0">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/bag.jpg"  class="img-fluid  ">
         </div>
         <div class="col  p-0">
             <div class="overlay-img">
-                <div class="overlay-img-text"><p class="text-i">Graphic Design</p></div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/coffee-beans.jpg" class="img-fluid " >
         </div>
         <div class="col p-0">
             <div class="overlay-img">
-                <div class="overlay-img-text">Graphic Design</div>
+                <div class="overlay-img-text"><p class="text-i">Graphic Design</p>
+                    <i class="fa-solid fa-plus"></i></div>
             </div>
             <img src="img/white-cat.jpg"   class="img-fluid " >
         </div>
