--- a/index.html
+++ b/index.html
@@ -309,6 +309,29 @@
 
 
 
+<section class="contact-banner">
+    <div class="container flex  flex-direction-column justify-center align-center">
+        <h2 class="margin-top-100px color-white ">Want to say <span class="green-text">hello</span> ?</h2>
+        <div class="margin-top-100px">
+            <a class="contact-button" href="#">
+                <span class="material-symbols-outlined contact-button-point">
+                    radio_button_unchecked
+                </span>
+                CONTACT
+            </a>
+            <div class="contact-button-line"></div>
+        </div>
+        <p class="margin-top-100px color-white">You can reach us via email <span class="green-text padding-left-20px">support@domain.com</span></p>
+        
+        
+    </div>
+
+
+
+</section>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
