kleine aanpassingen about us section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     </header>
 
     <section class="About-us">
+        <div class="who"><p>who we are & what we do</p></div>
+
         <div class="container">
             <div class="row padding-left-50px padding-right-50px">
                 <div class="col-9">
