--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="col-6 flex border-test testimanial-bg-image margin-top-130px margin-bottom-130px">
                     <div class="row flex justify-end margin-right-50px">
                         <div class=" col-7 testimonial-text margin-right-100px margin-top-150px">
-                            <p>test</p>
+                            <p><i class="fa-brands fa-dashcube testimonial-icon"></i><i class="fa-brands fa-dashcube testimonial-icon"></i></p>
                             <p>helali is the leading community of creatives, of-fering the best digital inspiration and downloads every day.</p>
                             <P>Jon Mikail,<span class="color-white"> logo desing</span></P>
                         </div>
