onnodige class verwijderd in services section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="button-div col-4 flex flex-direction-column margin-top-60px">
+                <div class="col-4 flex flex-direction-column margin-top-60px">
                     <div class="icon-overlay-container">
                         <i class="fa-brands fa-dribbble"></i>
                         <span class="icon-overlay"></span>
